# Resume-Tailor-CrewAI

./: README.md  chatbot_resume_builder.py  utils.py
job_resume_tailor/: README.md  pyproject.toml
job_resume_tailor/knowledge/: user_preference.txt
job_resume_tailor/src/job_resume_tailor/: amit_resume.md  crew.py  main.py
job_resume_tailor/src/job_resume_tailor/config/: agents.yaml  tasks.yaml
